[project]
name = "bunnyland-cartographysim"
version = "0.1.0"
description = "Out-of-tree Bunnyland plugin: a field map, compass, landmarks, fast-travel, and fog of war that make the world graph mappable and navigable."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bunnyland",
    "pydantic>=2.0",
    "relics",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bunnyland_cartographysim"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
